# enterprise-ai-platform-v2

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  ELITE_UPGRADES_PHASE1.md  Layer0_Compliance_Report.md  README.md  Synopsis_Enterprise_AI_Platform.docx  Synopsis_Enterprise_AI_Platform_V2.docx  Synopsis_Layer0_Routing_System_Academic.docx  Synopsis_Layer0_Routing_System_V2.docx  VALIDATION.md  docker-compose.yml  environment.yml  generate_layer0_synopsis.py  generate_routing_doc.py  generate_synopsis.py  pyproject.toml  quick_validate.py  read_docx.py  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  synopsis_text.txt  synopsis_utf8.txt  temp_svg.md  temp_svg.pptx  test_api.py  test_complexity.py  test_demo_models.py  test_elite_routing.py  test_pandoc.md  test_pandoc.pptx  test_results.txt  train_router.py  verify_elite_loop.py
.runtime/grounded_collections/: attach-v07-b3266c54-406-mp40zfn0.json  attach-v07-b3266c54-406-mp410w2a.json  attach-v07-demo-mp28jtqb.json  attach-v07-demo-mp2edu8l.json  attach-v07-demo-mp2eegbl.json  attach-v07-demo-mp2efntq.json  attach-v07-demo-mp2ehywx.json  attach-v07-demo-mp2ep35g.json  constitution-demo.json  loan-faq.json  persisted-loan-servicing.json  test-docs.json  test-docs2.json  test-docs3.json  test-docs4.json
artifacts/layer3/: corpus_build_report.json  embed_report.json  encoder_benchmark.json  high_risk_benchmark.json  validation_build_report.json
artifacts/layer_0/: benchmark_results.json  golden_set.json
artifacts/layer_1/: benchmark_results.json  golden_set.json  robustness_results.json  wild_corpus.json
artifacts/layer_2/: benchmark_results.json  golden_set.json  robustness_results.json  wild_corpus.json
data/: validation_set_ids.json
docs/: LLM_Routing_System_Implementation.docx  OLLAMA_SETUP.md  PRESENTATION_RUNBOOK.md  THESIS_HANDOFF_EXTERNAL_WIDGET.md
docs/layer3/: aggregate_scores.md  data_sources.md  encoder_choice.md  high_risk_classifier_choice.md  runbook.md
docs/layers/: LAYER3_ONLINE_LOOP_PLAN.md  LAYER_0_REPORT.md  LAYER_0_RESEARCH.md  LAYER_1_REPORT.md  LAYER_1_RESEARCH.md  LAYER_2_REPORT.md  LAYER_2_RESEARCH.md  LAYER_3_REPORT.md  LAYER_3_RESEARCH.md  PROTOCOL.md
experiments/layer_0_model2vec_vs_heuristic/: experiment.py  paraphrase_corpus.json  results.json
experiments/layer_1_code_detection/: corpus.json  experiment.py  results.json
experiments/layer_1_language_detection/: corpus.json  experiment.py  results.json
experiments/layer_2_embeddings_vs_jaccard/: experiment.py  results.json
frontend/dashboards/: README.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/v07/: .env.example  index.html  package-lock.json  package.json  vite.config.js
scripts/: benchmark_layer_0.py  benchmark_layer_1.py  benchmark_layer_2.py  build_project_ppt.py  build_routing_strategy_pdf.py  check_h_assembler.out  check_h_assembler.py  check_labels.py  check_weight_logic.out.txt  check_weight_logic.py  check_weight_logic.stdout.txt  consensus_labeler.py  dashboard.py  diag_after_fix.md  diag_after_fix2.md  diag_after_h_i.md  diag_baseline.md  diag_rag_test_docs4.py  migrate_telemetry_l3_columns.py  presentation_benchmark.py  pytest_h_i.txt  pytest_h_i_2.txt  pytest_h_i_3.txt  pytest_h_i_4.txt  pytest_h_i_5.txt  pytest_h_i_6.txt  pytest_h_i_7.txt  robustness_test_layer_1.py  robustness_test_layer_2.py  routing_benchmark.py  routing_benchmark_diff.py
scripts/layer3/: __init__.py  _common.py  _grader_bakeoff.py  _high_risk_eval.py  add_wildbench_questions.py  benchmark_encoders.py  benchmark_high_risk_detection.py  build_outcomes_corpus.py  build_validation_set.py  calibrate_priors.py  calibrate_quality_floor.py  embed_corpus.py  gate_correctness.py  generate_mmlu_outcomes.py  generate_outcomes.py  generate_validation_outcomes.py  harvest_outcomes.py  merge_generated_outcomes.py  merge_outcomes.py  prove_calibration_loop.py  setup_qdrant_collection.py  train_quality_head.py  validate_loo.py  validate_loo_mmlu.py  validate_routing.py  verify_models.py
src/database/: base.py  connection.py  session.py
src/layer0_model_infra/: gateway.py  models.py  query_analyzer.py  registry.py  router.py
src/layer1_intelligence/: __init__.py  claim_verifier.py  document_grounding.py  domain_profiles.py  grounded_answer.py  pdf_render.py  rag_service.py  vector_index.py
src/layer2_orchestrator/: execution_loop.py  guardrails.py  latency_budget.py
src/layer3_domain/: document_collections.py  document_models.py  (+6 more)
tests/: README.md  test_elite_pipeline.py
(+224 files in other folders)
